api v8 cleaning